chore(refund): long타입으로 변경